--- a/app-react/package.json
+++ b/app-react/package.json
@@ -5,10 +5,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
-    "react": "^18.0.0",
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^3.1.0"
+    "web-vitals": "^3.1.0",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -32,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
+    "css-loader": "^6.7.3",
+    "cypress": "^12.9.0",
+    "style-loader": "^3.3.2"
   }
 }
