--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "devDependencies": {
     "cypress": "^9.7.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "yup": "^1.0.2"
   }
 }
